--- a/.env.example.env
+++ b/.env.example.env
@@ -12,10 +12,10 @@ LOG_CHANNEL=stack
 ### Database ###
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=33065
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=banana500
 
 ### Broadcasting ###
 BROADCAST_DRIVER=log
